--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
     <footer>
         Site desenvolvido por Nathan Martucho
-        Email: Nathan.Martucho@escola.pr.gov.br
+        Email: nathan.martucho@escola.pr.gov.br
 
     </footer>
 
